@@ -1,5 +1,4 @@
 2001-10-03  Christian Rose  <menthos@menthos.com>
-
 	* sv.po: Updated Swedish translation.
 
 2001-09-29  Valek Filippov  <frob@df.ru>
